src/test/deca/context/invalid/comparaisonIcompatible.deca
// Description:
//    Comparaison
//
// Resultats:
//    Ligne 12: Comparaison incompatible entre int et bool
// 
// Historique:
//    cree le 13/01/2023
{
	int a = 0;
	boolean b = true;
	if (a == b){
	}
}
